<resources>
    <string name="app_name">Splasho</string>
    <string name="open">Open</string>
    <string name="close">Close</string>

    <string name="action_photos">Photos</string>
    <string name="action_curated_photos">Curated Photos</string>
    <string name="action_collections">Collections</string>
    <string name="action_settings">Settings</string>
    <string name="action_share">Share</string>
    <string name="action_rate_us">Rate us</string>
    <string name="action_send_feedback">Send Feedback</string>
    <string name="action_version">Version</string>
    <string name="action_search">Search</string>

    <string name="login_with_unsplash">Login with Unsplash</string>
    <string name="skip_login">Skip</string>

    <string name="unable_to_connect_error_message">Unable to connect to the network :(</string>
    <string name="something_went_wrong_error_message">Something isn\'t right. Please try again later.</string>

</resources>
