<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/menu_top"
        android:checkableBehavior="single">
        <item
            android:id="@+id/action_photos"
            android:icon="@drawable/ic_camera_black_24dp"
            android:title="@string/action_photos" />
        <item
            android:id="@+id/action_collections"
            android:icon="@drawable/ic_image_filter_black_24dp"
            android:title="@string/action_collections" />
        <item
            android:id="@+id/action_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/action_settings" />
    </group>

    <group
        android:id="@+id/menu_bottom"
        android:checkableBehavior="none">
        <item
            android:id="@+id/action_share"
            android:icon="@drawable/ic_share_variant_black_24dp"
            android:title="@string/action_share" />

        <item
            android:id="@+id/action_rate_us"
            android:icon="@drawable/ic_star_black_24dp"
            android:title="@string/action_rate_us" />
        <item
            android:id="@+id/action_send_feedback"
            android:icon="@drawable/ic_comment_black_24dp"
            android:title="@string/action_send_feedback" />
        <item
            android:id="@+id/action_version"
            android:icon="@drawable/ic_information_black_24dp"
            android:title="@string/action_version" />
    </group>
</menu>