<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/colorPrimary">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:src="@drawable/ic_image_filter_hdr_white_48dp" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/iv_logo"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/montserrat"
            android:text="@string/app_name"
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            android:textSize="22sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_login_with_unsplash"
            style="@style/RoundedButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_title"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:onClick="onLoginWithUnsplash"
            android:text="@string/login_with_unsplash" />

        <Button
            android:id="@+id/btn_skip_login"
            style="@style/RoundedButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/btn_login_with_unsplash"
            android:layout_alignRight="@+id/btn_login_with_unsplash"
            android:layout_below="@+id/btn_login_with_unsplash"
            android:layout_marginTop="20dp"
            android:background="@drawable/selector_btn_default"
            android:onClick="onSkipLogin"
            android:text="@string/skip_login"
            android:textColor="@color/colorPrimaryDark" />
    </RelativeLayout>
</RelativeLayout>